fix horizontal scroll

--- a/footer/__logo-link/_fond-druzya/footer__logo-link_fond-druzya.css
+++ b/footer/__logo-link/_fond-druzya/footer__logo-link_fond-druzya.css
@@ -1,3 +1,9 @@
 .footer__logo-link_fond-druzya {
-  width: 235px;
+  max-width: 235px;
+}
+
+@media screen and (max-width: 880px) {
+  .footer__logo-link_fond-druzya {
+    max-width: 220px;
+  }
 }
